[package]
name = "usb"
version = "0.3.0"
authors = ["CarlosAMolina"]
edition = "2021"
description = "Manage USB devices on Gnu/Linux systems"
documentation = "https://carlosamolina.github.io/projects/usb-linux/usb-linux.html"
repository = "https://github.com/CarlosAMolina/usb-linux"
keywords = ["usb", "mount", "udisksctl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
